--- a/.github/workflows/BuildRun.yml
+++ b/.github/workflows/BuildRun.yml
@@ -16,7 +16,7 @@ concurrency:
 jobs:
 
   build:
-    if: contains(github.event.head_commit.message, '[BUILD]')
+    if: contains(github.event.head_commit.message, '[BUILD]') || github.event_name == 'workflow_dispatch'
     uses: ./.github/workflows/build.yml
     with:
       environment: PROD
