--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation(project(":CreditCardModule"))
     implementation(project(":japl-android-finances-paid-module"))
     implementation(project(":credit"))
+    implementation(project(":japl-android-utils"))
 
 
     implementation 'androidx.core:core-ktx:1.13.1'
