--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,7 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.56.2'
     implementation 'com.google.dagger:dagger-producers:2.52'
     kapt 'com.google.dagger:hilt-compiler:2.56.2'
+    implementation("androidx.hilt:hilt-navigation-compose:1.2.0")
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
