--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,8 @@ dependencies {
     implementation('androidx.credentials:credentials:1.5.0')
     implementation('androidx.credentials:credentials-play-services-auth:1.5.0')
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.4'
+    implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:2.9.4")
     implementation 'androidx.navigation:navigation-fragment-ktx:2.8.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.8.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
