--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "co.japl.android.myapplication"
         minSdk 26
         targetSdk 36
-        versionCode 4_05_26_146
-        versionName "V 4.05.26 build 146 Migration Projection view and additional credit"
+        versionCode 4_05_26_147
+        versionName "V 4.05.26 build 147 Fix issus with Google rules"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
