Adjust Android Compatibility and Add Project Documentation (#71)
* Adjust SDK versions for wider compatibility and add project info [BUILD]

- Set minSdk to 21 across all modules (minimum for Jetpack Compose).
- Set compileSdk and targetSdk to 35 (Android 15).
- Enabled Core Library Desugaring to support java.time on older Android versions.
- Removed unnecessary @RequiresApi(Build.VERSION_CODES.R) from MainActivity.
- Cleaned up redundant API-dependent code in Colors.kt.
- Added agents/jules/PROJECT_INFO.md with project overview.

Co-authored-by: nano871022 <13209915+nano871022@users.noreply.github.com>

* Update SDK to 36, enable edge-to-edge and fix compatibility [BUILD]

- Updated compileSdk and targetSdk to 36 across all modules.
- Enabled edge-to-edge in MainActivity using enableEdgeToEdge().
- Added android:fitsSystemWindows="true" to activity_main.xml and drawable.xml to handle insets.
- Replaced context.getColor with ContextCompat.getColor in Colors.kt for API 21/22 support.
- Enabled Core Library Desugaring in all modules.
- Updated agents/jules/PROJECT_INFO.md with latest configuration.

Co-authored-by: nano871022 <13209915+nano871022@users.noreply.github.com>

* Target SDK 36, Edge-to-Edge UI, and SMS Permission Protocol [BUILD]

- Updated all modules to compileSdk 36 and targetSdk 36.
- Enabled Edge-to-Edge UI in MainActivity.
- Added Prominent Disclosure and Rationale for SMS permissions to comply with Google Play policies.
- Ensured API compatibility for minSdk 21 using ContextCompat and Core Library Desugaring.
- Added project documentation in agents/jules/PROJECT_INFO.md.

Co-authored-by: nano871022 <13209915+nano871022@users.noreply.github.com>

* Target SDK 36, Min SDK 26, Edge-to-Edge and SMS Permissions [BUILD]

- Updated all modules to compileSdk 36 and targetSdk 36.
- Set minSdk to 26 across all modules.
- Enabled Edge-to-Edge UI in MainActivity.
- Implemented Prominent Disclosure for SMS permissions to comply with Google Play policies.
- Added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,10 @@ android {
 
     defaultConfig {
         applicationId "co.japl.android.myapplication"
-        minSdk 35
-        versionCode 4_05_26_145
-        versionName "V 4.05.25 build 144 Migration Projection view and additional credit"
+        minSdk 26
+        targetSdk 36
+        versionCode 4_05_26_150
+        versionName "V 4.05.26 build 150 Fix issues interface"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -44,6 +45,11 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_21
         targetCompatibility JavaVersion.VERSION_21
+        coreLibraryDesugaringEnabled true
+    }
+
+    kotlinOptions {
+        jvmTarget = "21"
     }
 
     buildFeatures {
@@ -72,6 +78,7 @@ android {
 
 
 dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
     implementation(project(':japl-android-finances-core'))
     implementation(project(':japl-android-finances-services'))
