--- a/japl-android-finances-core/build.gradle
+++ b/japl-android-finances-core/build.gradle
@@ -25,10 +25,16 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_21
         targetCompatibility JavaVersion.VERSION_21
+        coreLibraryDesugaringEnabled true
+    }
+
+    kotlinOptions {
+        jvmTarget = "21"
     }
 }
 
 dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
     implementation(project(":japl-finances-iports"))
     implementation 'com.google.dagger:hilt-android:2.56.2'
